[package]
name = "libp2p-ping-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.50", features = ["tcp", "dns", "tokio", "noise", "mplex", "yamux", "websocket", "ping", "macros"] }
futures = "0.3.21"
tokio = { version = "1.26.0", features = ["full"] }
